feat: Add corporate certificate setup for DevContainers
- Updated .gitignore to exclude corporate certificates and sensitive files.
- Created CERTIFICATE_SETUP.md for detailed instructions on configuring corporate SSL certificates.
- Implemented Dockerfile to copy and install corporate certificates during the build process.
- Enhanced README.md with SSL certificate setup instructions and project overview.
- Updated devcontainer.json to include necessary features and environment variables.
- Improved post-create.sh to configure Git SSL settings and install required tools.
- Added Codespaces prebuild workflow for automated image building and pushing.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,14 @@ configs/config.local.yaml
 *~
 .DS_Store
 
+# DevContainer - Certificates and sensitive files (NEVER commit these!)
+.devcontainer/certs/
+.devcontainer/corporate-certs/
+.devcontainer/**/*.crt
+.devcontainer/**/*.pem
+.devcontainer/**/*.key
+**/.devcontainer/certs/
+
 # Frontend
 web/node_modules/
 web/dist/
